<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgMain">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Title.Text"
            android:text="@string/about_us" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableLeft="@mipmap/ic_left"
            android:drawablePadding="5dp"
            android:gravity="start|center_vertical"
            android:text="@string/go_back"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_size_m" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/about_vertical_margin"
        android:src="@mipmap/ic_launcher_login" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_size_m" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/about_horizontal_margin"
        android:layout_marginTop="@dimen/about_vertical_margin"
        android:layout_marginRight="@dimen/about_horizontal_margin"
        android:text="@string/about_desc"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_size_m" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/about_vertical_margin"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/text_size_m" />


</RelativeLayout>
