<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgMain"
    android:orientation="vertical">

    <TextView
        style="@style/Title.Text"
        android:text="@string/user" />

    <RelativeLayout
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgWhite"
        android:padding="@dimen/padding_horizontal">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar_height"
            android:layout_height="@dimen/avatar_height" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/padding_horizontal"
            android:layout_toEndOf="@+id/avatar"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_username"
                style="@style/LabelTitle" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/text_size_s" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height"
        android:layout_marginTop="@dimen/padding_horizontal"
        android:background="@color/bgWhite"
        android:padding="@dimen/padding_horizontal">

        <TextView
            style="@style/LabelTitle"
            android:layout_centerVertical="true"
            android:text="@string/help" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_right" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height"
        android:layout_marginTop="@dimen/padding_horizontal"
        android:background="@color/bgWhite"
        android:padding="@dimen/padding_horizontal">

        <TextView
            style="@style/LabelTitle"
            android:layout_centerVertical="true"
            android:text="@string/about_us" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_right" />

    </RelativeLayout>
</LinearLayout>
